tests/baselines/reference/arithmeticOperatorWithTypeParameter.errors.txt
==== tests/cases/compiler/arithmeticOperatorWithTypeParameter.ts (180 errors) ====
    // type parameter type is not valid for arithmetic operand
    function foo<T>(t: T) {
        var a: any;
        var b: boolean;
        var c: number;
        var d: string;
        var e: {};
    
        var r1a1 = a * t;
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(9,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1a2 = a / t;
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(10,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1a3 = a % t;
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(11,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1a4 = a - t;
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(12,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1a5 = a << t;
                        ~
!!! arithmeticOperatorWithTypeParameter.ts(13,21): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1a6 = a >> t;
                        ~
!!! arithmeticOperatorWithTypeParameter.ts(14,21): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1a7 = a >>> t;
                         ~
!!! arithmeticOperatorWithTypeParameter.ts(15,22): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1a8 = a & t;
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(16,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1a9 = a ^ t;
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(17,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1a10 = a | t;
                        ~
!!! arithmeticOperatorWithTypeParameter.ts(18,21): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
        var r2a1 = t * a;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(20,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2a2 = t / a;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(21,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2a3 = t % a;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(22,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2a4 = t - a;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(23,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2a5 = t << a;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(24,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2a6 = t >> a;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(25,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2a7 = t >>> a;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(26,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2a8 = t & a;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(27,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2a9 = t ^ a;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(28,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2a10 = t | a;
                    ~
!!! arithmeticOperatorWithTypeParameter.ts(29,17): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
        var r1b1 = b * t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(31,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(31,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1b2 = b / t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(32,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(32,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1b3 = b % t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(33,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(33,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1b4 = b - t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(34,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(34,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1b5 = b << t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(35,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                        ~
!!! arithmeticOperatorWithTypeParameter.ts(35,21): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1b6 = b >> t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(36,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                        ~
!!! arithmeticOperatorWithTypeParameter.ts(36,21): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1b7 = b >>> t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(37,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                         ~
!!! arithmeticOperatorWithTypeParameter.ts(37,22): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1b8 = b & t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(38,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(38,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1b9 = b ^ t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(39,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(39,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1b10 = b | t;
                    ~
!!! arithmeticOperatorWithTypeParameter.ts(40,17): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                        ~
!!! arithmeticOperatorWithTypeParameter.ts(40,21): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
        var r2b1 = t * b;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(42,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(42,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2b2 = t / b;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(43,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(43,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2b3 = t % b;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(44,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(44,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2b4 = t - b;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(45,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(45,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2b5 = t << b;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(46,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                        ~
!!! arithmeticOperatorWithTypeParameter.ts(46,21): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2b6 = t >> b;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(47,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                        ~
!!! arithmeticOperatorWithTypeParameter.ts(47,21): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2b7 = t >>> b;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(48,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                         ~
!!! arithmeticOperatorWithTypeParameter.ts(48,22): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2b8 = t & b;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(49,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(49,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2b9 = t ^ b;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(50,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(50,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2b10 = t | b;
                    ~
!!! arithmeticOperatorWithTypeParameter.ts(51,17): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                        ~
!!! arithmeticOperatorWithTypeParameter.ts(51,21): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
        var r1c1 = c * t;
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(53,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1c2 = c / t;
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(54,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1c3 = c % t;
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(55,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1c4 = c - t;
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(56,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1c5 = c << t;
                        ~
!!! arithmeticOperatorWithTypeParameter.ts(57,21): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1c6 = c >> t;
                        ~
!!! arithmeticOperatorWithTypeParameter.ts(58,21): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1c7 = c >>> t;
                         ~
!!! arithmeticOperatorWithTypeParameter.ts(59,22): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1c8 = c & t;
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(60,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1c9 = c ^ t;
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(61,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1c10 = c | t;
                        ~
!!! arithmeticOperatorWithTypeParameter.ts(62,21): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
        var r2c1 = t * c;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(64,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2c2 = t / c;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(65,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2c3 = t % c;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(66,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2c4 = t - c;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(67,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2c5 = t << c;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(68,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2c6 = t >> c;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(69,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2c7 = t >>> c;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(70,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2c8 = t & c;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(71,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2c9 = t ^ c;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(72,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2c10 = t | c;
                    ~
!!! arithmeticOperatorWithTypeParameter.ts(73,17): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
        var r1d1 = d * t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(75,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(75,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1d2 = d / t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(76,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(76,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1d3 = d % t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(77,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(77,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1d4 = d - t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(78,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(78,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1d5 = d << t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(79,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                        ~
!!! arithmeticOperatorWithTypeParameter.ts(79,21): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1d6 = d >> t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(80,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                        ~
!!! arithmeticOperatorWithTypeParameter.ts(80,21): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1d7 = d >>> t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(81,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                         ~
!!! arithmeticOperatorWithTypeParameter.ts(81,22): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1d8 = d & t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(82,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(82,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1d9 = d ^ t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(83,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(83,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1d10 = d | t;
                    ~
!!! arithmeticOperatorWithTypeParameter.ts(84,17): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                        ~
!!! arithmeticOperatorWithTypeParameter.ts(84,21): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
        var r2d1 = t * d;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(86,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(86,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2d2 = t / d;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(87,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(87,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2d3 = t % d;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(88,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(88,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2d4 = t - d;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(89,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(89,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2d5 = t << d;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(90,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                        ~
!!! arithmeticOperatorWithTypeParameter.ts(90,21): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2d6 = t >> d;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(91,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                        ~
!!! arithmeticOperatorWithTypeParameter.ts(91,21): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2d7 = t >>> d;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(92,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                         ~
!!! arithmeticOperatorWithTypeParameter.ts(92,22): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2d8 = t & d;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(93,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(93,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2d9 = t ^ d;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(94,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(94,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2d10 = t | d;
                    ~
!!! arithmeticOperatorWithTypeParameter.ts(95,17): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                        ~
!!! arithmeticOperatorWithTypeParameter.ts(95,21): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
        var r1e1 = e * t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(97,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(97,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1e2 = e / t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(98,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(98,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1e3 = e % t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(99,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(99,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1e4 = e - t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(100,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(100,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1e5 = e << t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(101,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                        ~
!!! arithmeticOperatorWithTypeParameter.ts(101,21): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1e6 = e >> t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(102,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                        ~
!!! arithmeticOperatorWithTypeParameter.ts(102,21): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1e7 = e >>> t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(103,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                         ~
!!! arithmeticOperatorWithTypeParameter.ts(103,22): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1e8 = e & t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(104,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(104,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1e9 = e ^ t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(105,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(105,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1e10 = e | t;
                    ~
!!! arithmeticOperatorWithTypeParameter.ts(106,17): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                        ~
!!! arithmeticOperatorWithTypeParameter.ts(106,21): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
        var r2e1 = t * e;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(108,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(108,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2e2 = t / e;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(109,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(109,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2e3 = t % e;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(110,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(110,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2e4 = t - e;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(111,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(111,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2e5 = t << e;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(112,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                        ~
!!! arithmeticOperatorWithTypeParameter.ts(112,21): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2e6 = t >> e;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(113,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                        ~
!!! arithmeticOperatorWithTypeParameter.ts(113,21): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2e7 = t >>> e;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(114,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                         ~
!!! arithmeticOperatorWithTypeParameter.ts(114,22): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2e8 = t & e;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(115,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(115,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2e9 = t ^ e;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(116,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(116,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r2e10 = t | e;
                    ~
!!! arithmeticOperatorWithTypeParameter.ts(117,17): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                        ~
!!! arithmeticOperatorWithTypeParameter.ts(117,21): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
        var r1f1 = t * t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(119,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(119,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1f2 = t / t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(120,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(120,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1f3 = t % t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(121,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(121,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1f4 = t - t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(122,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(122,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1f5 = t << t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(123,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                        ~
!!! arithmeticOperatorWithTypeParameter.ts(123,21): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1f6 = t >> t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(124,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                        ~
!!! arithmeticOperatorWithTypeParameter.ts(124,21): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1f7 = t >>> t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(125,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                         ~
!!! arithmeticOperatorWithTypeParameter.ts(125,22): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1f8 = t & t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(126,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(126,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1f9 = t ^ t;
                   ~
!!! arithmeticOperatorWithTypeParameter.ts(127,16): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~
!!! arithmeticOperatorWithTypeParameter.ts(127,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var r1f10 = t | t;
                    ~
!!! arithmeticOperatorWithTypeParameter.ts(128,17): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                        ~
!!! arithmeticOperatorWithTypeParameter.ts(128,21): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    }